<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/_24sdp"
    android:orientation="vertical"
    tools:context=".SignUpFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="Join us to start Crypto trade!"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_45sdp"
            app:cardCornerRadius="@dimen/_15sdp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/india"></ImageView>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Discover your perfect Crypto currencies."
            android:textSize="@dimen/_9ssp">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create Account"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edt_edittext"
            android:hint="@string/edittext_hint1"
            android:paddingLeft="@dimen/_15sdp">

        </EditText>

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_edittext"
            android:hint="@string/edittext_hint2"
            android:paddingLeft="@dimen/_15sdp">

        </EditText>

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_edittext"
            android:hint="@string/edittext_hint3"

            android:paddingLeft="@dimen/_15sdp">

        </EditText>

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@drawable/edt_edittext"
            android:hint="@string/edittext_hint4"
            android:paddingLeft="@dimen/_15sdp">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.75"
                    android:scaleY="0.75">


                </RadioButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree"></TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:scaleX="0.75"
                    android:scaleY="0.75">

                </RadioButton>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New Account"></TextView>

            </LinearLayout>


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnJoinUs"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="Join Us"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/_145sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_50sdp"
            android:text="Do have already account ?"
            android:textSize="@dimen/_12ssp">

        </TextView>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold">

        </TextView>

    </LinearLayout>

</LinearLayout>